--- a/YazarWebsite/Web.config
+++ b/YazarWebsite/Web.config
@@ -14,6 +14,11 @@
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
+
+  <connectionStrings>
+    <add name="Context" connectionString="data source=.; initial catalog=WriterWebsite; integrated security=true;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
