--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -72,6 +72,14 @@
     <Compile Include="Migrations\202212140726472_mig1.designer.cs">
       <DependentUpon>202212140726472_mig1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202212281330152_mig_writer_edit.cs" />
+    <Compile Include="Migrations\202212281330152_mig_writer_edit.designer.cs">
+      <DependentUpon>202212281330152_mig_writer_edit.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202212281428181_mig_writertitle_add.cs" />
+    <Compile Include="Migrations\202212281428181_mig_writertitle_add.designer.cs">
+      <DependentUpon>202212281428181_mig_writertitle_add.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -88,6 +96,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202212140726472_mig1.resx">
       <DependentUpon>202212140726472_mig1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202212281330152_mig_writer_edit.resx">
+      <DependentUpon>202212281330152_mig_writer_edit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202212281428181_mig_writertitle_add.resx">
+      <DependentUpon>202212281428181_mig_writertitle_add.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
