use of dropdownlist in header operations, writers creating titles and category operations, header operations and edits, content by heading pages, content controller, listing content by title and details of header transactions

--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -80,6 +80,22 @@
     <Compile Include="Migrations\202212281428181_mig_writertitle_add.designer.cs">
       <DependentUpon>202212281428181_mig_writertitle_add.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202301021253001_mig_imagesizechange.cs" />
+    <Compile Include="Migrations\202301021253001_mig_imagesizechange.designer.cs">
+      <DependentUpon>202301021253001_mig_imagesizechange.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202301021311583_mig_writer_status.cs" />
+    <Compile Include="Migrations\202301021311583_mig_writer_status.designer.cs">
+      <DependentUpon>202301021311583_mig_writer_status.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202301021423229_mig_contentaddstatus.cs" />
+    <Compile Include="Migrations\202301021423229_mig_contentaddstatus.designer.cs">
+      <DependentUpon>202301021423229_mig_contentaddstatus.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202301021426222_mig_headingstatusadd.cs" />
+    <Compile Include="Migrations\202301021426222_mig_headingstatusadd.designer.cs">
+      <DependentUpon>202301021426222_mig_headingstatusadd.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -102,6 +118,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202212281428181_mig_writertitle_add.resx">
       <DependentUpon>202212281428181_mig_writertitle_add.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202301021253001_mig_imagesizechange.resx">
+      <DependentUpon>202301021253001_mig_imagesizechange.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202301021311583_mig_writer_status.resx">
+      <DependentUpon>202301021311583_mig_writer_status.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202301021423229_mig_contentaddstatus.resx">
+      <DependentUpon>202301021423229_mig_contentaddstatus.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202301021426222_mig_headingstatusadd.resx">
+      <DependentUpon>202301021426222_mig_headingstatusadd.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
