--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Abstract\IContactDal.cs" />
     <Compile Include="Abstract\IContentDal.cs" />
     <Compile Include="Abstract\IHeadingDal.cs" />
+    <Compile Include="Abstract\IMessageDal.cs" />
     <Compile Include="Abstract\IRepository.cs" />
     <Compile Include="Abstract\IWriterDal.cs" />
     <Compile Include="Concrete\Context.cs" />
@@ -67,6 +68,7 @@
     <Compile Include="EntityFramework\EfContactDal.cs" />
     <Compile Include="EntityFramework\EfContentDal.cs" />
     <Compile Include="EntityFramework\EfHeadingDal.cs" />
+    <Compile Include="EntityFramework\EfMessageDal.cs" />
     <Compile Include="EntityFramework\EfWriterDal.cs" />
     <Compile Include="Migrations\202212140726472_mig1.cs" />
     <Compile Include="Migrations\202212140726472_mig1.designer.cs">
@@ -95,6 +97,14 @@
     <Compile Include="Migrations\202301021426222_mig_headingstatusadd.cs" />
     <Compile Include="Migrations\202301021426222_mig_headingstatusadd.designer.cs">
       <DependentUpon>202301021426222_mig_headingstatusadd.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202301040911423_mig_add_message.cs" />
+    <Compile Include="Migrations\202301040911423_mig_add_message.designer.cs">
+      <DependentUpon>202301040911423_mig_add_message.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202301041355015_add_contactdateadd.cs" />
+    <Compile Include="Migrations\202301041355015_add_contactdateadd.designer.cs">
+      <DependentUpon>202301041355015_add_contactdateadd.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -130,6 +140,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202301021426222_mig_headingstatusadd.resx">
       <DependentUpon>202301021426222_mig_headingstatusadd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202301040911423_mig_add_message.resx">
+      <DependentUpon>202301040911423_mig_add_message.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202301041355015_add_contactdateadd.resx">
+      <DependentUpon>202301041355015_add_contactdateadd.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
