--- a/YazarWebsite/Web.config
+++ b/YazarWebsite/Web.config
@@ -23,6 +23,11 @@
     <authentication mode="Forms">
       <forms loginUrl="/Login/Index/"></forms>
     </authentication>
+    <roleManager enabled="true" defaultProvider="TestRoleProvider">
+      <providers>
+        <add name="TestRoleProvider" type="YazarWebsite.Roles.AdminRoleProvider" />
+      </providers>
+    </roleManager>
   </system.web>
   <connectionStrings>
     <add name="Context" connectionString="data source=.; initial catalog=WriterWebsite; integrated security=true;" providerName="System.Data.SqlClient" />
